update testing status

--- a/TODO
+++ b/TODO
@@ -1,7 +1,10 @@
 Test all files under as many versions of MATLAB as I can find:
 
 	figure_1.m: 2010b, 2011b
-	figure_2.m: 2011b
+	figure_2.m: 2010b, 2011b
+	figure_3.m: 2011b
+	figure_4.m: 2011b
 
 Consider octave and scilab compatibility as well. We would have to have separate
-files for scilab, since the comment syntax differs.
+files for scilab, since the comment syntax differs. Maybe a separate file for
+each program would be best.
