--- a/README
+++ b/README
@@ -5,6 +5,9 @@ following paper:
 Palmer, Lee C Potter, David H Johnson, Jay L Zweier, Rizwan Ahmad. Submitted to
 the Journal of Magnetic Resonance in 2012.
 
+The latest version of this code can be found at
+https://github.com/jalan/dual-scan_acquisition
+
 - Instructions -----------------------------------------------------------------
 
 To reproduce the desired figure, run the corresponding script (e.g. figure_2.m)
