--- a/README
+++ b/README
@@ -8,6 +8,10 @@ the Journal of Magnetic Resonance in 2012.
 The latest version of this code can be found at
 https://github.com/jalan/dual-scan_acquisition
 
+You can see the figures produced by the code at
+https://github.com/jalan/dual-scan_acquisition/wiki
+(Please see the paper for our final edited versions.)
+
 - Instructions -----------------------------------------------------------------
 
 To reproduce the desired figure, run the corresponding script (e.g. figure_2.m)
