--- a/README
+++ b/README
@@ -2,8 +2,8 @@ This is the MATLAB code and data needed to reproduce the figures in the
 following paper:
 
 "Dual-scan acquisition for accelerated continuous-wave EPR oximetry". Jason
-Palmer, Lee C Potter, David H Johnson, Jay L Zweier, Rizwan Ahmad. Submitted to
-the Journal of Magnetic Resonance in 2012.
+Palmer, Lee C Potter, David H Johnson, Jay L Zweier, Rizwan Ahmad. Accepted for
+publication in the Journal of Magnetic Resonance, 2012.
 
 The latest version of this code can be found at
 https://github.com/jalan/dual-scan_acquisition
