--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
-Consider octave and scilab compatibility. We would need separate files for
-scilab, since the comment syntax differs. Maybe a separate set of files for each
-program would be best.
+Finish octave compatibility. This will involve a little bit of conditional
+code--one block for MATLAB and one block for octave--in a few files.
+
+Consider scilab compatibility as well. This would involve separate files for
+scilab. There is a MATLAB->scilab code conversion tool that could do a lot of
+the work.
