--- a/README
+++ b/README
@@ -2,8 +2,9 @@ This is the code and data needed to reproduce the figures in the following
 paper:
 
 "Dual-scan acquisition for accelerated continuous-wave EPR oximetry". Jason
-Palmer, Lee C Potter, David H Johnson, Jay L Zweier, Rizwan Ahmad. Accepted for
-publication in the Journal of Magnetic Resonance, 2012.
+Palmer, Lee C Potter, David H Johnson, Jay L Zweier, Rizwan Ahmad. Journal of
+Magnetic Resonance, 2012.
+DOI: http://dx.doi.org/10.1016/j.jmr.2012.05.021
 
 The latest version of this code can be found at
 https://github.com/jalan/dual-scan_acquisition
