--- a/README
+++ b/README
@@ -6,6 +6,7 @@ Palmer, Lee C Potter, David H Johnson, Jay L Zweier, Rizwan Ahmad. Journal of
 Magnetic Resonance, 2012.
 DOI: http://dx.doi.org/10.1016/j.jmr.2012.05.021
 PubMed: http://www.ncbi.nlm.nih.gov/pubmed/22820009
+PubMed Central: http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3423522
 
 The latest version of this code can be found at
 https://github.com/jalan/dual-scan_acquisition
